--- a/index.html
+++ b/index.html
@@ -24,5 +24,24 @@
         </nav>
       </div>
     </header>
+
+    <main class="introducao-bg">
+      <div class="introducao">
+        <div class="introucao-conteudo">
+          <h1>Bicicletas feitas sob medida<span>.</span></h1>
+          <p>
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            para você. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a href="./bicicletas.html">Escolha a sua</a>
+        </div>
+        <div>
+          <img
+            src="./public/img/fotos/introducao.jpg"
+            alt="Bicicleta Elétrica Preta."
+          />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
