--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
-    <title>Bikcraft - Bicicletas Elétricas</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <title>Bikcraft - Bicicletas Elétricas</title>
   </head>
 
   <body>
@@ -27,13 +33,13 @@
 
     <main class="introducao-bg">
       <div class="introducao">
-        <div class="introucao-conteudo">
+        <div class="introducao-conteudo">
           <h1>Bicicletas feitas sob medida<span>.</span></h1>
           <p>
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para você. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a href="./bicicletas.html">Escolha a sua</a>
+          <a class="botao" href="./bicicletas.html">Escolha a sua</a>
         </div>
         <div>
           <img
